--- a/frontend/react_app/package.json
+++ b/frontend/react_app/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react_app",
-  "version": "0.1.0",
+  "name": "workwise-frontend",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
